--- a/theme/foyers/templates/mails/reservationEtudiant.html
+++ b/theme/foyers/templates/mails/reservationEtudiant.html
@@ -18,7 +18,7 @@
  
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
-  <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>Informations personnelles</i></td></tr>
+  <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>1) Informations personnelles</i></td></tr>
 <!--    <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr> -->
     <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%>{ sexe }</td></tr>
@@ -30,8 +30,8 @@
 </table><br/><br/>
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>Parents</i></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i></i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</td></tr>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>2) Informations familiales</i></td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i></i></td><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Père</b></td><td bgcolor="#B5D4E2"  style='text-align:center' width=33%><b>Mère</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%>{ namePere }</td><td width=33%>{ nameMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=34%>{ surnamePere }</td><td width=33%>{ surnameMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Profession</i></td><td width=34%>{ professionPere }</td><td width=33%>{ professionMere }</td></tr>
@@ -44,13 +44,13 @@
     <tr><td bgcolor="#8CACBB" width=33%><i>Code Postal</i></td><td width=34%>{ cpPere }</td><td width=33%>{ cpMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Ville</i></td><td width=34%>{ cityPere }</td><td width=33%>{ cityMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Pays</i></td><td width=34%>{ countryPere }</td><td width=33%>{ countryMere }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>Frères et soeurs</i></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Nombres de frères et soeurs</i></td><td width=67%>{ nombreFreresSoeurs }</td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Ages</i></td><td width=67%>{ ageFreresSoeurs }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i></i></td><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Frères et soeurs</b></td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Nombres de frères et soeurs</i></td><td width=34%>{ nombreFreresSoeurs }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Ages</i></td><td width=34%>{ ageFreresSoeurs }</td></tr>
 </table><br/><br/>
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>Études</i></td></tr>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>3) Études</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Études</i></td><td width=67%>{ etudes }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Métier envisagé</i></td><td width=67%>{ metier }</td></tr> 
     <tr><td bgcolor='#8CACBB' width=33%><i>Diplômes déjà obtenus</i></td><td width=67%>{ diplomes }</td></tr>
