--- a/theme/foyers/templates/blocks/formulaire/parents.html
+++ b/theme/foyers/templates/blocks/formulaire/parents.html
@@ -3,6 +3,7 @@
     
     
     <div class="container">
+     <div class="row">   
         <!--PERE-->
         <div class="col-md-6 col-sm-12">
             <h3 class="row">{{rubedo.translate("Block.Inscription.Pere")}}</h3>
@@ -145,16 +146,21 @@
         </div>
         
         <div>
-    <h3 class="row">{{rubedo.translate("Block.Inscription.FreresEtSoeurs")}}</h3>
+    </div>        
+    <div class="row">
+        <h3 class="row">{{rubedo.translate("Block.Inscription.FreresEtSoeurs")}}</h3>
+            
+        <div class="row" ng-if="!personneConnue">
+            <div class="col-sm-4"><label for="nombreFreresSoeurs" class="label_style">{{rubedo.translate("Block.Inscription.FreresSoeurs.Nombre")}} *</label></div>
+            <div class="col-sm-8"><input type="number" id="nombreFreresSoeurs" ng-model="contactCtrl.contactData.nombreFreresSoeurs" name="nombreFreresSoeurs" required></div>
+        </div>
+        <div class="row" ng-if="!personneConnue">
+            <div class="col-sm-4"><label for="ageFreresSoeurs" class="label_style">{{rubedo.translate("Block.Inscription.FreresSoeurs.Ages")}}</label></div>
+            <div class="col-sm-8"><input type="text" id="ageFreresSoeurs" ng-model="contactCtrl.contactData.ageFreresSoeurs" name="ageFreresSoeurs"></div>
+        </div>
+    </div>
         
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="nombreFreresSoeurs" class="label_style">{{rubedo.translate("Block.Inscription.FreresSoeurs.Nombre")}}</label></div>
-        <div class="col-sm-8"><input type="number" id="nombreFreresSoeurs" ng-model="contactCtrl.contactData.nombreFreresSoeurs" name="nombreFreresSoeurs" required></div>
-    </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="ageFreresSoeurs" class="label_style">{{rubedo.translate("Block.Inscription.FreresSoeurs.Ages")}}</label></div>
-        <div class="col-sm-8"><input type="text" id="ageFreresSoeurs" ng-model="contactCtrl.contactData.ageFreresSoeurs" name="ageFreresSoeurs"></div>
-    </div>
+    
         
         
         
