--- a/theme/foyers/templates/mails/testProgressif.html
+++ b/theme/foyers/templates/mails/testProgressif.html
@@ -5,18 +5,19 @@
                
         
         <div class="row" class="text-center">
-        <div style="margin-bottom:12px" ><h4></h4>{{rubedo.translate("Block.Inscription.Inscrire.Comme","S'inscrire comme")}}:</h4></div>
-        <div>
-            <input type="radio"  name="statut" id="etudiant" value="etudiant" ng-model="contactCtrl.contactData.statut" ng-click="showFormulaire = true;etudiant=true;jeunePro=false">
-                        <label for="etudiant" class="sexe_label boite">{{rubedo.translate("etudiant")}}</label>
-            <input type="radio"  name="jeunePro" id="jeunePro" value="jeunePro" ng-model="contactCtrl.contactData.statut" ng-click="showFormulaire = true;etudiant=false;jeunePro=true" required>
-                        <label for="jeunePro" class="sexe_label boite">{{rubedo.translate("jeunePro")}}</label>
+            <div style="margin-bottom:12px" ><h4></h4>{{rubedo.translate("Block.Inscription.Inscrire.Comme","S'inscrire comme")}}:</h4></div>
+            <div>
+                <input type="radio"  name="statut" id="etudiant" value="etudiant" ng-model="contactCtrl.contactData.statut" ng-click="showFormulaire = true;etudiant=true;jeunePro=false">
+                            <label for="etudiant" class="sexe_label boite">{{rubedo.translate("etudiant")}}</label>
+                <input type="radio"  name="jeunePro" id="jeunePro" value="jeunePro" ng-model="contactCtrl.contactData.statut" ng-click="showFormulaire = true;etudiant=false;jeunePro=true" required>
+                            <label for="jeunePro" class="sexe_label boite">{{rubedo.translate("jeunePro")}}</label>
+            </div>
         </div>
         
 
         <div ng-if="showFormulaire">
                 <div class="text-center">
-                        <h2 class="capital">{{rubedo.translate("Block.Inscription.Fiche", "Formulaire de candidature")}}</h2>
+                        <h1>{{rubedo.translate("Block.Inscription.Fiche", "Formulaire de candidature")}}</h1><br/><br/><br/>
                 </div>
         
                 <h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==1}" ng-click="contactCtrl.setCurrentStage(0,infos_personnelles.$valid)">{{rubedo.translate("Block.Inscription.InfosPerso", "Informations personnelles")}}
