--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -1,65 +1,61 @@
     <!--NOM-->
-    <div class="row" ng-if="!personneConnue">
+    <div class="row">
         <div class="col-sm-4"><label for="loisirs" class="label_style">{{rubedo.translate("Block.Inscription.Loisirs")}}</label></div>
-        <div class="col-sm-8"><textarea class="form-control" rows="3" id="loisirs" ng-model="inscription.loisirs" name="loisirs"></textarea></div>
+        <div class="col-sm-8"><textarea class="form-control" rows="3" id="loisirs" ng-model="contactCtrl.contactData.loisirs" name="loisirs"></textarea></div>
     </div>
-    <div class="row" ng-if="!personneConnue">
+    <div class="row">
         <div class="col-sm-4"><label for="pbsMedicaux" class="label_style">{{rubedo.translate("Block.Inscription.Problemes.Medicaux")}} *</label></div>
         <div class="col-sm-8 display_left">
-            <input type="radio"  name="pbsMedicaux" id="pbsMedicaux" value="pbsMedicaux" ng-model="inscription.pbsMedicaux.pbsMedicaux" ng-click="formCtrl.pbsMedicaux = true;" required>
+            <input type="radio"  name="pbsMedicaux" id="pbsMedicaux" value="pbsMedicaux" ng-model="contactCtrl.contactData.pbsMedicaux" ng-click="contactCtrl.pbsMedicaux = true;" required>
                         <label for="pbsMedicaux" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
-            <input type="radio"  name="pbsMedicaux" id="non_pbsMedicaux" value="non_pbsMedicaux" ng-model="inscription.pbsMedicaux.pbsMedicaux" ng-click="formCtrl.pbsMedicaux = false;" >
+            <input type="radio"  name="pbsMedicaux" id="non_pbsMedicaux" value="non_pbsMedicaux" ng-model="contactCtrl.contactData.pbsMedicaux" ng-click="contactCtrl.pbsMedicaux = false;" >
                         <label for="non_pbsMedicaux" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Non")}}</label>
         </div>
     </div>
-    <div ng-if="formCtrl.pbsMedicaux && !personneConnue"">
+    <div ng-if="contactCtrl.pbsMedicaux">
         <div class="row">
             <div class="col-sm-4"><label for="detailsPbsMedicaux" class="label_style">{{rubedo.translate("Block.Inscription.Preciser")}}</label></div>
-            <div class="col-sm-8"><input class="form-control" type="text" rows="2" id="detailsPbsMedicaux" ng-model="inscription.detailsPbsMedicaux" name="detailsPbsMedicaux"></div>
+            <div class="col-sm-8"><input class="form-control" type="text" rows="2" id="detailsPbsMedicaux" ng-model="contactCtrl.contactData.detailsPbsMedicaux" name="detailsPbsMedicaux"></div>
         </div>
     </div>
-    <div class="row" ng-if="!personneConnue">
+    <div class="row">
         <div class="col-sm-4"><label for="suiviMedical" class="label_style">{{rubedo.translate("Block.Inscription.Suivi.Medical")}} *</label></div>
         <div class="col-sm-8 display_left">
-            <input type="radio"  name="suiviMedical" id="suiviMedical" value="suiviMedical" ng-model="inscription.suiviMedical.suiviMedical" ng-click="formCtrl.suiviMedical = true;" required>
+            <input type="radio"  name="suiviMedical" id="suiviMedical" value="suiviMedical" ng-model="contactCtrl.contactData.suiviMedical" ng-click="contactCtrl.suiviMedical = true;" required>
                         <label for="suiviMedical" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
-            <input type="radio"  name="suiviMedical" id="non_suiviMedical" value="non_suiviMedical" ng-model="inscription.suiviMedical.suiviMedical" ng-click="formCtrl.suiviMedical = false;" >
+            <input type="radio"  name="suiviMedical" id="non_suiviMedical" value="non_suiviMedical" ng-model="contactCtrl.contactData.suiviMedical" ng-click="contactCtrl.suiviMedical = false;" >
                         <label for="non_suiviMedical" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Non")}}</label>
         </div>
     </div>
-    <div ng-if="formCtrl.suiviMedical && !personneConnue"">
+    <div ng-if="contactCtrl.suiviMedical">
         <div class="row">
             <div class="col-sm-4"><label for="detailsSuiviMedical" class="label_style">{{rubedo.translate("Block.Inscription.Preciser")}}</label></div>
-            <div class="col-sm-8"><input class="form-control" rows="2" type="text" id="detailsPbsMedicaux" ng-model="inscription.detailsSuiviMedical" name="detailsSuiviMedical"></div>
+            <div class="col-sm-8"><input class="form-control" rows="2" type="text" id="detailsPbsMedicaux" ng-model="contactCtrl.contactData.detailsSuiviMedical" name="detailsSuiviMedical"></div>
         </div>
     </div>
     
     
-    <div class="row" ng-if="!personneConnue">
+    <div class="row">
         <div class="col-sm-4"><label for="origine" class="label_style">{{rubedo.translate("Block.Inscription.Connaissance.Foyer")}}*</label></div>
         <div class="col-sm-8">
-            <input type="checkbox"  name="origine" id="relations" value="relations" ng-model="inscription.origine.origine" required>
+            <input type="radio"  name="relations" id="relations" value="relations" ng-model="contactCtrl.contactData.origine" required>
                         <label for="relations" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Relations")}}</label>
-            <input type="checkbox"  name="origine" id="tracts" value="tracts" ng-model="inscription.origine.origine">
+            <input type="radio"  name="tracts" id="tracts" value="tracts" ng-model="contactCtrl.contactData.origine">
                         <label for="tracts" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Tracts")}}</label>
-            <input type="checkbox"  name="origine" id="site" value="site" ng-model="inscription.origine.origine">
+            <input type="radio"  name="site" id="site" value="site" ng-model="contactCtrl.contactData.origine">
                         <label for="site" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Site")}}</label>
-            <input type="checkbox"  name="origine" id="annonces" value="annonces" ng-model="inscription.origine.origine">
+            <input type="radio"  name="annonces" id="annonces" value="annonces" ng-model="contactCtrl.contactData.origine">
                         <label for="annonces" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Annonces")}}</label>
             <div class="col-sm-3">
-                <input type="checkbox" name="origine" id="autre" value="autre" ng-model="inscription.origine.origine">
+                <input type="radio" name="autre" id="autre" value="autre" ng-model="contactCtrl.contactData.origine">
                             <label for="autre" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Autre")}}</label>
             </div>
             <div class="col-sm-5">
-                <input class="form-control" type="text" id="precisions" ng-model="inscription.precisions" name="precisions" placeholder="Préciser...">
+                <input class="form-control" type="text" id="precisions" ng-model="contactCtrl.contactData.precisions" name="precisions" placeholder="Préciser...">
             </div>
             
                         
         </div>
-    </div>
-
-    <div class="row" ng-repeat="question in formCtrl.questions | orderBy:'order' track by $index">
-            <ng-include src="formCtrl.questionsComplementaires"></ng-include>
     </div>
 
     
