--- a/theme/foyers/templates/mails/reservationEtudiant.html
+++ b/theme/foyers/templates/mails/reservationEtudiant.html
@@ -4,6 +4,7 @@
   <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
   <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
   <h3>{ age } ans (à ce jour)</h3>
+  <h3><b>Étudiant</b> : { etudes } </h3>
 </div>
 <!--<table width="80%">
 <tr>
@@ -61,6 +62,14 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Date des résultats</i></td><td width=67%>{ dateResultats }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Date de début d'année scolaire</i></td><td width=67%>{ dateDebutAnnee }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Date de fin d'année scolaire</i></td><td width=67%>{ dateDebutAnnee }</td></tr>
+</table><br/><br/>
+
+<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>4) Informations complémentaires</i></td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Loisirs</i></td><td width=67%>{ loisirs }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Comment le jeune a-t-il connu le foyer?</i></td><td width=34%>{ origine }</td><td width=33%>{ precisions }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Problèmes médicaux</i></td><td width=67%>{ detailsPbsMedicaux }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Suivi médical</i></td><td width=67%>{ detailsSuiviMedical }</td></tr>
 </table><br/><br/>
 
 
