--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -1,7 +1,7 @@
     <!--NOM-->
     <div class="row">
-        <div class="col-sm-4"><label for="loisirs" class="label_style">{{rubedo.translate("Block.Inscription.Loisirs")}}</label></div>
-        <div class="col-sm-8"><textarea class="form-control" rows="3" id="loisirs" ng-model="contactCtrl.contactData.loisirs" name="loisirs"></textarea></div>
+        <div class="col-sm-4"><label for="loisirs" class="label_style">{{rubedo.translate("Block.Inscription.Loisirs")}} *</label></div>
+        <div class="col-sm-8"><textarea class="form-control" rows="3" id="loisirs" ng-model="contactCtrl.contactData.loisirs" name="loisirs" required></textarea></div>
     </div>
     <div class="row">
         <div class="col-sm-4"><label for="pbsMedicaux" class="label_style">{{rubedo.translate("Block.Inscription.Problemes.Medicaux")}} *</label></div>
