--- a/theme/foyers/templates/mails/reservationEtudiant.html
+++ b/theme/foyers/templates/mails/reservationEtudiant.html
@@ -6,20 +6,16 @@
   <h3>{ age } ans (à ce jour)</h3>
   <h3><b>Étudiant</b> : { etudes } </h3>
 </div>
-<!--<table width="80%">
-<tr>
-  <td> 
-    Nom : { nom }<br/>
-    Prénom : { prenom }<br/>
-  </td>
-
- </tr>  
-</table>-->
+<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>1) Présentation générale et intérêt porté pour le foyer</i></td></tr>
+    <tr><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Présentation du jeune</b></td><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Ses engagements (personnels, associatifs, dans l'Église...)</b></td><td bgcolor="#B5D4E2"  style='text-align:center' width=33%><b>Pourquoi il désire rejoindre le foyer</td></tr>
+    <tr><td width=34%>{ motivation }</td><td width=34%>{ engagements }</td><td width=33%>{ desir }</td></tr>
+</table><br/><br/>
 <br/> 
  
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
-  <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>1) Informations personnelles</i></td></tr>
+  <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>2) Informations personnelles</i></td></tr>
 <!--    <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr> -->
     <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%>{ sexe }</td></tr>
@@ -31,7 +27,7 @@
 </table><br/><br/>    
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>2) Informations familiales</i></td></tr>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center;font-size:1.2em;'><i>3) Informations familiales</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i></i></td><td bgcolor="#B5D4E2" style='text-align:center' width=34%><b>Père</b></td><td bgcolor="#B5D4E2"  style='text-align:center' width=33%><b>Mère</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%>{ namePere }</td><td width=33%>{ nameMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=34%>{ surnamePere }</td><td width=33%>{ surnameMere }</td></tr>
@@ -51,7 +47,7 @@
 </table><br/><br/>
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>3) Études</i></td></tr>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>4) Études</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Études</i></td><td width=67%>{ etudes }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Métier envisagé</i></td><td width=67%>{ metier }</td></tr> 
     <tr><td bgcolor='#8CACBB' width=33%><i>Diplômes déjà obtenus</i></td><td width=67%>{ diplomes }</td></tr>
@@ -65,7 +61,7 @@
 </table><br/><br/>
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>4) Informations complémentaires</i></td></tr>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>5) Informations complémentaires</i></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Loisirs</i></td><td width=67%>{ loisirs }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Comment le jeune a-t-il connu le foyer?</i></td><td width=34%>{ origine }</td><td width=33%>{ precisions }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Problèmes médicaux</i></td><td width=67%>{ detailsPbsMedicaux }</td></tr>
